Fixed some typos and broken image

--- a/cimug2024/index.html
+++ b/cimug2024/index.html
@@ -2581,7 +2581,7 @@ ol &gt; li {
   color: rgb(31, 35, 40);
   margin-top: 1.5rem;
 };" data-size="16:9">
-<p>This can save teams <strong>a lot</strong> of work.</p>
+<p>This could save teams <strong>a lot</strong> of work.</p>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="32" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
@@ -4189,7 +4189,7 @@ ol &gt; li {
 <p>URIs...</p>
 <ul>
 <li data-marpit-fragment="1">can encode ownership in the domain;</li>
-<li data-marpit-fragment="2">can namespace identifiers.</li>
+<li data-marpit-fragment="2">can provide namespacing for identifiers.</li>
 </ul>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
@@ -4567,10 +4567,10 @@ ol &gt; li {
   color: rgb(31, 35, 40);
   margin-top: 1.5rem;
 };" data-size="16:9">
-<p>Note in particular how easy it is to use multiple reference models.</p>
+<p>It's very easy to use multiple reference models.</p>
 <ul>
 <li data-marpit-fragment="1">This provides immense flexibility and ease of standardization.</li>
-<li data-marpit-fragment="2">It's usually very difficult to do.</li>
+<li data-marpit-fragment="2">Usually this is very difficult to do.</li>
 </ul>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
@@ -4722,7 +4722,7 @@ ol &gt; li {
   color: rgb(31, 35, 40);
   margin-top: 1.5rem;
 };" data-size="16:9">
-<p>But before going there, I need to mention compact URIs (CURIEs).</p>
+<p>But before going there, I need to explain compact URIs (CURIEs).</p>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="59" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
@@ -5107,9 +5107,9 @@ ol &gt; li {
   color: rgb(31, 35, 40);
   margin-top: 1.5rem;
 };" data-size="16:9">
-<p>LinkML also supports other URI mappings...</p>
+<p>LinkML also supports other kinds of URI mappings.</p>
 <ul>
-<li data-marpit-fragment="1">including expressing relations to business glossary terms using SKOS.</li>
+<li data-marpit-fragment="1">Most notably expressing narrower, broader or exact matches to terms using SKOS.</li>
 </ul>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
@@ -5335,7 +5335,7 @@ ol &gt; li {
 <p>This means every data element in the CIM can be uniquely referenced by its URI.</p>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="67" data-marpit-fragments="1" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="67" data-marpit-fragments="2" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
   font-family: &quot;Fira Sans&quot;;
   font-size: 1.8rem;
   text-align: left;
@@ -5406,12 +5406,10 @@ ol &gt; li {
   color: rgb(31, 35, 40);
   margin-top: 1.5rem;
 };" data-size="16:9">
-<p>We saw a real life example earlier:</p>
+<p>We saw a real life example earlier for the power system resource class:</p>
 <ul>
-<li><code>https://cim.ucaiug.io/ns#PowerSystemResource</code>...</li>
-</ul>
-<ul>
-<li data-marpit-fragment="1">or <code>cim:PowerSystemResource</code>.</li>
+<li data-marpit-fragment="1">URI: <code>https://cim.ucaiug.io/ns#PowerSystemResource</code>;</li>
+<li data-marpit-fragment="2">CURIE: <code>cim:PowerSystemResource</code>.</li>
 </ul>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
@@ -5637,7 +5635,7 @@ ol &gt; li {
   color: rgb(31, 35, 40);
   margin-top: 1.5rem;
 };" data-size="16:9">
-<p>Reference models often have more to offer than just standardized names</p>
+<p>Reference models often have more to offer than just standardized names.</p>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="71" data-marpit-fragments="1" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
@@ -5713,7 +5711,7 @@ ol &gt; li {
 };" data-size="16:9">
 <p>The CIM describes attributes, relations, etc.</p>
 <ul>
-<li data-marpit-fragment="1">ENTSO-E's CGMES profiles provide use-case specific constraints.</li>
+<li data-marpit-fragment="1">CGMES profiles provide use-case specific constraints.</li>
 </ul>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
@@ -6013,7 +6011,7 @@ ol &gt; li {
   color: rgb(31, 35, 40);
   margin-top: 1.5rem;
 };" data-size="16:9">
-<p>I've written a script that has generated a LinkML schema for each CGMES profile.</p>
+<p>I've written a script that has generated a LinkML schema for each CGMES profile</p>
 <ul>
 <li data-marpit-fragment="1">It is based on the RDFS 2020 version.</li>
 </ul>
@@ -6090,6 +6088,7 @@ ol &gt; li {
   color: rgb(31, 35, 40);
   margin-top: 1.5rem;
 };" data-size="16:9">
+<p>Resources:</p>
 <ul>
 <li>The <a href="https://github.com/alliander-opensource/cimrdfs2linkml">script</a> that generates the LinkML schemas.</li>
 <li>The <a href="https://github.com/alliander-opensource/cgmes-profiles">LinkML schemas</a>.</li>
@@ -6244,11 +6243,11 @@ ol &gt; li {
 };" data-size="16:9">
 <p>Similarly, I've generated LinkML schemas for the entire CIM.</p>
 <ul>
-<li data-marpit-fragment="1">It is based on the Sparx EA project.</li>
+<li data-marpit-fragment="1">It is based on the official Sparx EA project.</li>
 </ul>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="79" data-marpit-fragments="1" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-class="with-bullets" data-style="section {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="79" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-class="with-bullets" data-style="section {
   font-family: &quot;Fira Sans&quot;;
   font-size: 1.8rem;
   text-align: left;
@@ -6319,12 +6318,11 @@ ol &gt; li {
   color: rgb(31, 35, 40);
   margin-top: 1.5rem;
 };" data-size="16:9">
+<p>Resources:</p>
 <ul>
 <li>The <a href="https://github.com/bartkl/cim-to-linkml">script</a> that generates the LinkML schemas.</li>
 <li>The <a href="https://github.com/alliander-opensource/cim-linkml">LinkML schemas</a>.</li>
-</ul>
-<ul>
-<li data-marpit-fragment="1">The documentation hasn't been generated yet.</li>
+<li>The documentation hasn't been generated yet.</li>
 </ul>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
@@ -6554,7 +6552,7 @@ ol &gt; li {
 <p>Given a CIM or CGMES LinkML schema, you pass in the classes you'd like to use, and it will create a LinkML schema for you.</p>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="83" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
   font-family: &quot;Fira Sans&quot;;
   font-size: 1.8rem;
   text-align: left;
@@ -6624,11 +6622,114 @@ ol &gt; li {
   /* color: rgb(87, 82, 121); */
   color: rgb(31, 35, 40);
   margin-top: 1.5rem;
-};" data-size="16:9">
-<p><img src="Attachments/index%202024-05-13%2010.34.00.excalidraw" alt="" /></p>
-<footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
+};" data-size="16:9" data-marpit-advanced-background="background"><div data-marpit-advanced-background-container="true" data-marpit-advanced-background-direction="horizontal"><figure style="background-image:url(&quot;Attachments/index%202024-05-13%2010.34.00.excalidraw.light.svg&quot;);background-size:30%;"><figcaption>width:</figcaption></figure></div></section></foreignObject><foreignObject width="1280" height="720"><section id="83" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
+  font-family: &quot;Fira Sans&quot;;
+  font-size: 1.8rem;
+  text-align: left;
+}
+h1 { font-size: 3.0rem; }
+h2 { font-size: 2.8rem; }
+h3 { font-size: 2.3rem; }
+h4 { font-size: 1.8rem; }
+p {
+  font-weight: normal;
+  font-size: 1.8rem;
+}
+footer img {
+  background-color: unset;  /* Fixes transparancy. */ 
+}
+section.align-center {
+  text-align: center;
+}
+section.align-left {
+  text-align: left;
+}
+section.with-bullets ol, section.with-bullets ul {
+  list-style: disc;
+  margin-bottom: 0;
+}
+ol, ul {
+  list-style: none;  /* No bullet points for fragments. */
+  margin-bottom: 0;
+}
+ul &gt; li,
+ol &gt; li {
+  /* color: rgb(87, 82, 121); */
+  color: rgb(31, 35, 40);
+  margin-top: 1.5rem;
+}" lang="en-US" style="--footer:![w:100px h:60px](Attachments/alliander_logo.png);--style:section {
+  font-family: &quot;Fira Sans&quot;;
+  font-size: 1.8rem;
+  text-align: left;
+}
+h1 { font-size: 3.0rem; }
+h2 { font-size: 2.8rem; }
+h3 { font-size: 2.3rem; }
+h4 { font-size: 1.8rem; }
+p {
+  font-weight: normal;
+  font-size: 1.8rem;
+}
+footer img {
+  background-color: unset;  /* Fixes transparancy. */ 
+}
+section.align-center {
+  text-align: center;
+}
+section.align-left {
+  text-align: left;
+}
+section.with-bullets ol, section.with-bullets ul {
+  list-style: disc;
+  margin-bottom: 0;
+}
+ol, ul {
+  list-style: none;  /* No bullet points for fragments. */
+  margin-bottom: 0;
+}
+ul &gt; li,
+ol &gt; li {
+  /* color: rgb(87, 82, 121); */
+  color: rgb(31, 35, 40);
+  margin-top: 1.5rem;
+};" data-size="16:9" data-marpit-advanced-background="content"><footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="84" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
+</foreignObject><foreignObject width="1280" height="720" data-marpit-advanced-background="pseudo"><section data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
+  font-family: &quot;Fira Sans&quot;;
+  font-size: 1.8rem;
+  text-align: left;
+}
+h1 { font-size: 3.0rem; }
+h2 { font-size: 2.8rem; }
+h3 { font-size: 2.3rem; }
+h4 { font-size: 1.8rem; }
+p {
+  font-weight: normal;
+  font-size: 1.8rem;
+}
+footer img {
+  background-color: unset;  /* Fixes transparancy. */ 
+}
+section.align-center {
+  text-align: center;
+}
+section.align-left {
+  text-align: left;
+}
+section.with-bullets ol, section.with-bullets ul {
+  list-style: disc;
+  margin-bottom: 0;
+}
+ol, ul {
+  list-style: none;  /* No bullet points for fragments. */
+  margin-bottom: 0;
+}
+ul &gt; li,
+ol &gt; li {
+  /* color: rgb(87, 82, 121); */
+  color: rgb(31, 35, 40);
+  margin-top: 1.5rem;
+}" lang="en-US" style="" data-size="16:9" data-marpit-advanced-background="pseudo"></section></foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="84" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
   font-family: &quot;Fira Sans&quot;;
   font-size: 1.8rem;
   text-align: left;
