--- a/cimug2024/index.html
+++ b/cimug2024/index.html
@@ -2364,7 +2364,7 @@ ol &gt; li {
 };" data-size="16:9">
 <p>Even external contributors can make changes...</p>
 <ul>
-<li data-marpit-fragment="1">and request merging those back to the upstream model.</li>
+<li data-marpit-fragment="1">and request merging those back in the upstream model.</li>
 </ul>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
