--- a/cimug2024/index.html
+++ b/cimug2024/index.html
@@ -1324,7 +1324,7 @@ ol &gt; li {
 };" data-size="16:9">
 <p>Due to time constraints I will jump straight to LinkML.</p>
 <ul>
-<li data-marpit-fragment="1">I'm happy to answer questions about challenges I encountered with Sparx EA and RDF afterwards.</li>
+<li data-marpit-fragment="1">I'm happy to answer questions about challenges we encountered with Sparx EA and RDF afterwards.</li>
 </ul>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
