--- a/cimug2024/index.html
+++ b/cimug2024/index.html
@@ -7106,7 +7106,7 @@ ol &gt; li {
   color: rgb(31, 35, 40);
   margin-top: 1.5rem;
 };" data-size="16:9">
-<p>But to make it even more cool...</p>
+<p>Can we make this even more cool?</p>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="89" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
@@ -7183,161 +7183,7 @@ ol &gt; li {
 <h2 id="road-ahead">Road Ahead</h2>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="90" data-marpit-fragments="1" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
-  font-family: &quot;Fira Sans&quot;;
-  font-size: 1.8rem;
-  text-align: left;
-}
-h1 { font-size: 3.0rem; }
-h2 { font-size: 2.8rem; }
-h3 { font-size: 2.3rem; }
-h4 { font-size: 1.8rem; }
-p {
-  font-weight: normal;
-  font-size: 1.8rem;
-}
-footer img {
-  background-color: unset;  /* Fixes transparancy. */ 
-}
-section.align-center {
-  text-align: center;
-}
-section.align-left {
-  text-align: left;
-}
-section.with-bullets ol, section.with-bullets ul {
-  list-style: disc;
-  margin-bottom: 0;
-}
-ol, ul {
-  list-style: none;  /* No bullet points for fragments. */
-  margin-bottom: 0;
-}
-ul &gt; li,
-ol &gt; li {
-  /* color: rgb(87, 82, 121); */
-  color: rgb(31, 35, 40);
-  margin-top: 1.5rem;
-}" lang="en-US" style="--footer:![w:100px h:60px](Attachments/alliander_logo.png);--style:section {
-  font-family: &quot;Fira Sans&quot;;
-  font-size: 1.8rem;
-  text-align: left;
-}
-h1 { font-size: 3.0rem; }
-h2 { font-size: 2.8rem; }
-h3 { font-size: 2.3rem; }
-h4 { font-size: 1.8rem; }
-p {
-  font-weight: normal;
-  font-size: 1.8rem;
-}
-footer img {
-  background-color: unset;  /* Fixes transparancy. */ 
-}
-section.align-center {
-  text-align: center;
-}
-section.align-left {
-  text-align: left;
-}
-section.with-bullets ol, section.with-bullets ul {
-  list-style: disc;
-  margin-bottom: 0;
-}
-ol, ul {
-  list-style: none;  /* No bullet points for fragments. */
-  margin-bottom: 0;
-}
-ul &gt; li,
-ol &gt; li {
-  /* color: rgb(87, 82, 121); */
-  color: rgb(31, 35, 40);
-  margin-top: 1.5rem;
-};" data-size="16:9">
-<p>Currently LinkML is being used by Netbeheer Nederland, a cooperative initiative between DSOs in the Netherlands.</p>
-<ul>
-<li data-marpit-fragment="1">Is it of interest to others?</li>
-</ul>
-<footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
-</section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="91" data-marpit-fragments="1" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
-  font-family: &quot;Fira Sans&quot;;
-  font-size: 1.8rem;
-  text-align: left;
-}
-h1 { font-size: 3.0rem; }
-h2 { font-size: 2.8rem; }
-h3 { font-size: 2.3rem; }
-h4 { font-size: 1.8rem; }
-p {
-  font-weight: normal;
-  font-size: 1.8rem;
-}
-footer img {
-  background-color: unset;  /* Fixes transparancy. */ 
-}
-section.align-center {
-  text-align: center;
-}
-section.align-left {
-  text-align: left;
-}
-section.with-bullets ol, section.with-bullets ul {
-  list-style: disc;
-  margin-bottom: 0;
-}
-ol, ul {
-  list-style: none;  /* No bullet points for fragments. */
-  margin-bottom: 0;
-}
-ul &gt; li,
-ol &gt; li {
-  /* color: rgb(87, 82, 121); */
-  color: rgb(31, 35, 40);
-  margin-top: 1.5rem;
-}" lang="en-US" style="--footer:![w:100px h:60px](Attachments/alliander_logo.png);--style:section {
-  font-family: &quot;Fira Sans&quot;;
-  font-size: 1.8rem;
-  text-align: left;
-}
-h1 { font-size: 3.0rem; }
-h2 { font-size: 2.8rem; }
-h3 { font-size: 2.3rem; }
-h4 { font-size: 1.8rem; }
-p {
-  font-weight: normal;
-  font-size: 1.8rem;
-}
-footer img {
-  background-color: unset;  /* Fixes transparancy. */ 
-}
-section.align-center {
-  text-align: center;
-}
-section.align-left {
-  text-align: left;
-}
-section.with-bullets ol, section.with-bullets ul {
-  list-style: disc;
-  margin-bottom: 0;
-}
-ol, ul {
-  list-style: none;  /* No bullet points for fragments. */
-  margin-bottom: 0;
-}
-ul &gt; li,
-ol &gt; li {
-  /* color: rgb(87, 82, 121); */
-  color: rgb(31, 35, 40);
-  margin-top: 1.5rem;
-};" data-size="16:9">
-<p>What uses can the community come up with for LinkML?</p>
-<ul>
-<li data-marpit-fragment="1">Input is welcome!</li>
-</ul>
-<footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
-</section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="92" data-marpit-fragments="3" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-class="with-bullets" data-style="section {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="90" data-marpit-fragments="3" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-class="with-bullets" data-style="section {
   font-family: &quot;Fira Sans&quot;;
   font-size: 1.8rem;
   text-align: left;
@@ -7416,7 +7262,241 @@ ol &gt; li {
 </ul>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="91" data-marpit-fragments="3" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
+  font-family: &quot;Fira Sans&quot;;
+  font-size: 1.8rem;
+  text-align: left;
+}
+h1 { font-size: 3.0rem; }
+h2 { font-size: 2.8rem; }
+h3 { font-size: 2.3rem; }
+h4 { font-size: 1.8rem; }
+p {
+  font-weight: normal;
+  font-size: 1.8rem;
+}
+footer img {
+  background-color: unset;  /* Fixes transparancy. */ 
+}
+section.align-center {
+  text-align: center;
+}
+section.align-left {
+  text-align: left;
+}
+section.with-bullets ol, section.with-bullets ul {
+  list-style: disc;
+  margin-bottom: 0;
+}
+ol, ul {
+  list-style: none;  /* No bullet points for fragments. */
+  margin-bottom: 0;
+}
+ul &gt; li,
+ol &gt; li {
+  /* color: rgb(87, 82, 121); */
+  color: rgb(31, 35, 40);
+  margin-top: 1.5rem;
+}" lang="en-US" style="--footer:![w:100px h:60px](Attachments/alliander_logo.png);--style:section {
+  font-family: &quot;Fira Sans&quot;;
+  font-size: 1.8rem;
+  text-align: left;
+}
+h1 { font-size: 3.0rem; }
+h2 { font-size: 2.8rem; }
+h3 { font-size: 2.3rem; }
+h4 { font-size: 1.8rem; }
+p {
+  font-weight: normal;
+  font-size: 1.8rem;
+}
+footer img {
+  background-color: unset;  /* Fixes transparancy. */ 
+}
+section.align-center {
+  text-align: center;
+}
+section.align-left {
+  text-align: left;
+}
+section.with-bullets ol, section.with-bullets ul {
+  list-style: disc;
+  margin-bottom: 0;
+}
+ol, ul {
+  list-style: none;  /* No bullet points for fragments. */
+  margin-bottom: 0;
+}
+ul &gt; li,
+ol &gt; li {
+  /* color: rgb(87, 82, 121); */
+  color: rgb(31, 35, 40);
+  margin-top: 1.5rem;
+};" data-size="16:9">
+<p>Also, we are investigating how to improve the LinkML ecosystem.</p>
+<ul>
+<li data-marpit-fragment="1">A GUI for Ritger's LinkML profiler;</li>
+<li data-marpit-fragment="2">Extensions for popular IDEs and text editors;</li>
+<li data-marpit-fragment="3">Etc.</li>
+</ul>
+<footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="92" data-marpit-fragments="2" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
+  font-family: &quot;Fira Sans&quot;;
+  font-size: 1.8rem;
+  text-align: left;
+}
+h1 { font-size: 3.0rem; }
+h2 { font-size: 2.8rem; }
+h3 { font-size: 2.3rem; }
+h4 { font-size: 1.8rem; }
+p {
+  font-weight: normal;
+  font-size: 1.8rem;
+}
+footer img {
+  background-color: unset;  /* Fixes transparancy. */ 
+}
+section.align-center {
+  text-align: center;
+}
+section.align-left {
+  text-align: left;
+}
+section.with-bullets ol, section.with-bullets ul {
+  list-style: disc;
+  margin-bottom: 0;
+}
+ol, ul {
+  list-style: none;  /* No bullet points for fragments. */
+  margin-bottom: 0;
+}
+ul &gt; li,
+ol &gt; li {
+  /* color: rgb(87, 82, 121); */
+  color: rgb(31, 35, 40);
+  margin-top: 1.5rem;
+}" lang="en-US" style="--footer:![w:100px h:60px](Attachments/alliander_logo.png);--style:section {
+  font-family: &quot;Fira Sans&quot;;
+  font-size: 1.8rem;
+  text-align: left;
+}
+h1 { font-size: 3.0rem; }
+h2 { font-size: 2.8rem; }
+h3 { font-size: 2.3rem; }
+h4 { font-size: 1.8rem; }
+p {
+  font-weight: normal;
+  font-size: 1.8rem;
+}
+footer img {
+  background-color: unset;  /* Fixes transparancy. */ 
+}
+section.align-center {
+  text-align: center;
+}
+section.align-left {
+  text-align: left;
+}
+section.with-bullets ol, section.with-bullets ul {
+  list-style: disc;
+  margin-bottom: 0;
+}
+ol, ul {
+  list-style: none;  /* No bullet points for fragments. */
+  margin-bottom: 0;
+}
+ul &gt; li,
+ol &gt; li {
+  /* color: rgb(87, 82, 121); */
+  color: rgb(31, 35, 40);
+  margin-top: 1.5rem;
+};" data-size="16:9">
+<p>Furthermore, I would love to see adoption increase.</p>
+<ul>
+<li data-marpit-fragment="1">Currently LinkML is being used by Netbeheer Nederland, a cooperative initiative between DSOs in the Netherlands...</li>
+<li data-marpit-fragment="2">but I'm sure it could be beneficial to others as well.</li>
+</ul>
+<footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
+</section>
 </foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="93" data-marpit-fragments="1" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
+  font-family: &quot;Fira Sans&quot;;
+  font-size: 1.8rem;
+  text-align: left;
+}
+h1 { font-size: 3.0rem; }
+h2 { font-size: 2.8rem; }
+h3 { font-size: 2.3rem; }
+h4 { font-size: 1.8rem; }
+p {
+  font-weight: normal;
+  font-size: 1.8rem;
+}
+footer img {
+  background-color: unset;  /* Fixes transparancy. */ 
+}
+section.align-center {
+  text-align: center;
+}
+section.align-left {
+  text-align: left;
+}
+section.with-bullets ol, section.with-bullets ul {
+  list-style: disc;
+  margin-bottom: 0;
+}
+ol, ul {
+  list-style: none;  /* No bullet points for fragments. */
+  margin-bottom: 0;
+}
+ul &gt; li,
+ol &gt; li {
+  /* color: rgb(87, 82, 121); */
+  color: rgb(31, 35, 40);
+  margin-top: 1.5rem;
+}" lang="en-US" style="--footer:![w:100px h:60px](Attachments/alliander_logo.png);--style:section {
+  font-family: &quot;Fira Sans&quot;;
+  font-size: 1.8rem;
+  text-align: left;
+}
+h1 { font-size: 3.0rem; }
+h2 { font-size: 2.8rem; }
+h3 { font-size: 2.3rem; }
+h4 { font-size: 1.8rem; }
+p {
+  font-weight: normal;
+  font-size: 1.8rem;
+}
+footer img {
+  background-color: unset;  /* Fixes transparancy. */ 
+}
+section.align-center {
+  text-align: center;
+}
+section.align-left {
+  text-align: left;
+}
+section.with-bullets ol, section.with-bullets ul {
+  list-style: disc;
+  margin-bottom: 0;
+}
+ol, ul {
+  list-style: none;  /* No bullet points for fragments. */
+  margin-bottom: 0;
+}
+ul &gt; li,
+ol &gt; li {
+  /* color: rgb(87, 82, 121); */
+  color: rgb(31, 35, 40);
+  margin-top: 1.5rem;
+};" data-size="16:9">
+<p>If you are interested in using LinkML or have any other questions or ideas...</p>
+<ul>
+<li data-marpit-fragment="1">feel free to contact me!</li>
+</ul>
+<footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
+</section>
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="94" data-marpit-fragments="1" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
   font-family: &quot;Fira Sans&quot;;
   font-size: 1.8rem;
   text-align: left;
