--- a/cimug2024/index.html
+++ b/cimug2024/index.html
@@ -7262,7 +7262,7 @@ ol &gt; li {
 </ul>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="91" data-marpit-fragments="3" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="91" data-marpit-fragments="3" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-class="with-bullets" data-style="section {
   font-family: &quot;Fira Sans&quot;;
   font-size: 1.8rem;
   text-align: left;
@@ -7297,7 +7297,7 @@ ol &gt; li {
   /* color: rgb(87, 82, 121); */
   color: rgb(31, 35, 40);
   margin-top: 1.5rem;
-}" lang="en-US" style="--footer:![w:100px h:60px](Attachments/alliander_logo.png);--style:section {
+}" lang="en-US" class="with-bullets" style="--footer:![w:100px h:60px](Attachments/alliander_logo.png);--class:with-bullets;--style:section {
   font-family: &quot;Fira Sans&quot;;
   font-size: 1.8rem;
   text-align: left;
