--- a/cimug2024/index.html
+++ b/cimug2024/index.html
@@ -7254,11 +7254,11 @@ ol &gt; li {
   color: rgb(31, 35, 40);
   margin-top: 1.5rem;
 };" data-size="16:9">
-<p>I want to improve interoperability with existing CIM tools.</p>
+<p>I want to improve interoperability with existing CIM tools:</p>
 <ul>
-<li data-marpit-fragment="1">Generating LinkML from EA.</li>
-<li data-marpit-fragment="2">Generating EA UML from LinkML</li>
-<li data-marpit-fragment="3">Interoperating with CIM Tool.</li>
+<li data-marpit-fragment="1">generating LinkML from EA;</li>
+<li data-marpit-fragment="2">generating EA UML from LinkML;</li>
+<li data-marpit-fragment="3">interoperating with CIM Tool.</li>
 </ul>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
@@ -7335,9 +7335,9 @@ ol &gt; li {
 };" data-size="16:9">
 <p>Also, we are investigating how to improve the LinkML ecosystem.</p>
 <ul>
-<li data-marpit-fragment="1">A GUI for Ritger's LinkML profiler;</li>
-<li data-marpit-fragment="2">Extensions for popular IDEs and text editors;</li>
-<li data-marpit-fragment="3">Etc.</li>
+<li data-marpit-fragment="1">a GUI for Ritger's LinkML profiler;</li>
+<li data-marpit-fragment="2">extensions for popular IDEs and text editors;</li>
+<li data-marpit-fragment="3">etc.</li>
 </ul>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
