--- a/cimug2024/index.html
+++ b/cimug2024/index.html
@@ -6661,7 +6661,7 @@ ol &gt; li {
 <h2 id="road-ahead">Road Ahead</h2>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="83" data-marpit-fragments="3" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-class="with-bullets" data-style="section {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="83" data-marpit-fragments="1" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-class="with-bullets" data-style="section {
   font-family: &quot;Fira Sans&quot;;
   font-size: 1.8rem;
   text-align: left;
@@ -6734,92 +6734,11 @@ ol &gt; li {
 };" data-size="16:9">
 <p>I want to improve interoperability with existing CIM tools:</p>
 <ul>
-<li data-marpit-fragment="1">generating LinkML from EA;</li>
-<li data-marpit-fragment="2">generating EA UML from LinkML;</li>
-<li data-marpit-fragment="3">interoperating with CIM Tool.</li>
+<li data-marpit-fragment="1">Also, we are investigating how to improve the LinkML ecosystem.</li>
 </ul>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="84" data-marpit-fragments="3" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-class="with-bullets" data-style="section {
-  font-family: &quot;Fira Sans&quot;;
-  font-size: 1.8rem;
-  text-align: left;
-}
-h1 { font-size: 3.0rem; }
-h2 { font-size: 2.8rem; }
-h3 { font-size: 2.3rem; }
-h4 { font-size: 1.8rem; }
-p {
-  font-weight: normal;
-  font-size: 1.8rem;
-}
-footer img {
-  background-color: unset;  /* Fixes transparancy. */ 
-}
-section.align-center {
-  text-align: center;
-}
-section.align-left {
-  text-align: left;
-}
-section.with-bullets ol, section.with-bullets ul {
-  list-style: disc;
-  margin-bottom: 0;
-}
-ol, ul {
-  list-style: none;  /* No bullet points for fragments. */
-  margin-bottom: 0;
-}
-ul &gt; li,
-ol &gt; li {
-  /* color: rgb(87, 82, 121); */
-  color: rgb(31, 35, 40);
-  margin-top: 1.5rem;
-}" lang="en-US" class="with-bullets" style="--footer:![w:100px h:60px](Attachments/alliander_logo.png);--class:with-bullets;--style:section {
-  font-family: &quot;Fira Sans&quot;;
-  font-size: 1.8rem;
-  text-align: left;
-}
-h1 { font-size: 3.0rem; }
-h2 { font-size: 2.8rem; }
-h3 { font-size: 2.3rem; }
-h4 { font-size: 1.8rem; }
-p {
-  font-weight: normal;
-  font-size: 1.8rem;
-}
-footer img {
-  background-color: unset;  /* Fixes transparancy. */ 
-}
-section.align-center {
-  text-align: center;
-}
-section.align-left {
-  text-align: left;
-}
-section.with-bullets ol, section.with-bullets ul {
-  list-style: disc;
-  margin-bottom: 0;
-}
-ol, ul {
-  list-style: none;  /* No bullet points for fragments. */
-  margin-bottom: 0;
-}
-ul &gt; li,
-ol &gt; li {
-  /* color: rgb(87, 82, 121); */
-  color: rgb(31, 35, 40);
-  margin-top: 1.5rem;
-};" data-size="16:9">
-<p>Also, we are investigating how to improve the LinkML ecosystem.</p>
-<ul>
-<li data-marpit-fragment="1">a GUI for Ritger's LinkML profiler;</li>
-<li data-marpit-fragment="2">extensions for popular IDEs and text editors;</li>
-<li data-marpit-fragment="3">etc.</li>
-</ul>
-<footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
-</section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="85" data-marpit-fragments="2" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="84" data-marpit-fragments="2" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
   font-family: &quot;Fira Sans&quot;;
   font-size: 1.8rem;
   text-align: left;
@@ -6897,7 +6816,7 @@ ol &gt; li {
 </ul>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="86" data-marpit-fragments="1" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="85" data-marpit-fragments="1" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
   font-family: &quot;Fira Sans&quot;;
   font-size: 1.8rem;
   text-align: left;
@@ -6968,13 +6887,13 @@ ol &gt; li {
   color: rgb(31, 35, 40);
   margin-top: 1.5rem;
 };" data-size="16:9">
-<p>If you are interested in using LinkML or have any other questions or ideas...</p>
+<p>So if you are interested in using LinkML or have any other questions or ideas...</p>
 <ul>
 <li data-marpit-fragment="1">feel free to contact me!</li>
 </ul>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="87" data-marpit-fragments="1" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="86" data-marpit-fragments="1" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
   font-family: &quot;Fira Sans&quot;;
   font-size: 1.8rem;
   text-align: left;
