--- a/cimug2024/index.html
+++ b/cimug2024/index.html
@@ -1657,7 +1657,7 @@ ol &gt; li {
 </code></pre>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="21" data-marpit-fragments="1" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-class="with-bullets" data-style="section {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="21" data-marpit-fragments="1" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
   font-family: &quot;Fira Sans&quot;;
   font-size: 1.8rem;
   text-align: left;
@@ -1692,7 +1692,7 @@ ol &gt; li {
   /* color: rgb(87, 82, 121); */
   color: rgb(31, 35, 40);
   margin-top: 1.5rem;
-}" lang="en-US" class="with-bullets" style="--footer:![w:100px h:60px](Attachments/alliander_logo.png);--class:with-bullets;--style:section {
+}" lang="en-US" style="--footer:![w:100px h:60px](Attachments/alliander_logo.png);--style:section {
   font-family: &quot;Fira Sans&quot;;
   font-size: 1.8rem;
   text-align: left;
@@ -4177,7 +4177,7 @@ ol &gt; li {
 </ul>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="53" data-marpit-fragments="3" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-class="with-bullets" data-style="section {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="53" data-marpit-fragments="2" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-class="with-bullets" data-style="section {
   font-family: &quot;Fira Sans&quot;;
   font-size: 1.8rem;
   text-align: left;
@@ -4251,8 +4251,7 @@ ol &gt; li {
 <p>It's very easy to use multiple reference models.</p>
 <ul>
 <li data-marpit-fragment="1">This provides immense flexibility and ease of standardization.</li>
-<li data-marpit-fragment="2">Usually this is difficult or even impossible to do.</li>
-<li data-marpit-fragment="3">It's no problem if the models are expressed in different modeling languages.</li>
+<li data-marpit-fragment="2">It's no problem if the models are expressed in different modeling languages.</li>
 </ul>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
@@ -6330,7 +6329,7 @@ ol &gt; li {
   color: rgb(31, 35, 40);
   margin-top: 1.5rem;
 };" data-size="16:9">
-<p>Imagine how difficult much of the above would be using Sparx EA.</p>
+<p>Imagine how difficult some of this would be using Sparx EA.</p>
 <ul>
 <li data-marpit-fragment="1">LinkML just really lends itself for data modeling in a decentralized world.</li>
 </ul>
@@ -6555,7 +6554,7 @@ ol &gt; li {
   color: rgb(31, 35, 40);
   margin-top: 1.5rem;
 };" data-size="16:9">
-<p>I want to improve interoperability with existing CIM tools:</p>
+<p>I want to improve interoperability with existing CIM tools.</p>
 <ul>
 <li data-marpit-fragment="1">Also, we are investigating how to improve the LinkML ecosystem.</li>
 </ul>
