--- a/cimug2024/index.html
+++ b/cimug2024/index.html
@@ -1254,7 +1254,7 @@ ol &gt; li {
 </ul>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
-</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="16" data-marpit-fragments="1" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
+</foreignObject></svg><svg data-marpit-svg="" viewBox="0 0 1280 720"><foreignObject width="1280" height="720"><section id="16" data-marpit-fragments="2" data-footer="![w:100px h:60px](Attachments/alliander_logo.png)" data-style="section {
   font-family: &quot;Fira Sans&quot;;
   font-size: 1.8rem;
   text-align: left;
@@ -1328,7 +1328,8 @@ ol &gt; li {
 <p><img src="Attachments/linkml_resized.png" alt="" /></p>
 <p>LinkML is a data modeling language developed in the Bio Sciences department at Berkeley Lab.</p>
 <ul>
-<li data-marpit-fragment="1">LinkML is also a tool, with a growing ecosystem surrounding it.</li>
+<li data-marpit-fragment="1">It's open source.</li>
+<li data-marpit-fragment="2">LinkML is also a tool, with a growing ecosystem surrounding it.</li>
 </ul>
 <footer><img src="Attachments/alliander_logo.png" alt="" style="width:100px;height:60px;" /></footer>
 </section>
